--- a/FZero/Vanrise.Fzero.Services.Mysql/Vanrise.Fzero.Services.Mysql.csproj
+++ b/FZero/Vanrise.Fzero.Services.Mysql/Vanrise.Fzero.Services.Mysql.csproj
@@ -113,11 +113,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="bin\Debug\FMSMysqlSln.InstallLog" />
-    <None Include="bin\Debug\FMSMysqlSln.InstallState" />
-    <None Include="bin\Debug\FMSMysqlSln.v11.suo" />
-    <None Include="bin\Debug\FMSMysqlSln.vshost.exe.config" />
-    <None Include="bin\Debug\InstallUtil.InstallLog" />
     <None Include="FMSMysqlSln_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -146,7 +141,6 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="bin\Debug\FMSMysqlSln.vshost.exe" />
     <Content Include="Dependecies\MySql.Data.dll" />
     <Content Include="Dependecies\MySql.Data.Entity.EF5.dll" />
     <Content Include="Dependecies\MySql.Web.dll" />
@@ -178,6 +172,9 @@
       <Project>{a0a85889-ced2-4de6-bda9-fef2c10eb564}</Project>
       <Name>Vanrise.CommonLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
