--- a/FZero/Vanrise.Fzero.Services.RecievedMysql/Vanrise.Fzero.Services.RecievedMysql.csproj
+++ b/FZero/Vanrise.Fzero.Services.RecievedMysql/Vanrise.Fzero.Services.RecievedMysql.csproj
@@ -113,7 +113,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="bin\Debug\InstallUtil.InstallLog" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ProjectInstaller.resx">
@@ -173,6 +172,9 @@
       <Project>{a0a85889-ced2-4de6-bda9-fef2c10eb564}</Project>
       <Name>Vanrise.CommonLibrary</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
