--- a/FZero/Vanrise.Fzero.Bypass.ClientWebSite/web.config
+++ b/FZero/Vanrise.Fzero.Bypass.ClientWebSite/web.config
@@ -33,7 +33,6 @@
     <add key="ClientName" value="st"/>
     <add key="ClientPassword" value="ST@P@$$@123"/>
     <add key="GMT" value="2"/>
-    
     <add key="ListentoEmail" value="VanriseFMS@gmail.com"/>
     <add key="EmailPassword" value="P@ssw0rd123456"/>
     <add key="HostName" value="pop.gmail.com"/>
@@ -43,8 +42,7 @@
     <add key="UploadPath" value="\\166.62.16.176\\FMS_Import\\Manual\\"/>
     <add key="AutomaticUploadPath" value="C:\\FMS_Import\\Automatic\\"/>
     <add key="ReportsPath" value="http://www.fzero-vanrise.com/FMS_Reports/"/>
-    <add key="aspnet:MaxHttpCollectionKeys" value="3000" />
-
+    <add key="aspnet:MaxHttpCollectionKeys" value="3000"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
@@ -57,6 +55,7 @@
         <add assembly="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.ServiceProcess, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="Telerik.Web.Design, Version=2013.1.220.45, Culture=neutral, PublicKeyToken=121FAE78165BA3D4"/>
       </assemblies>
       <buildProviders>
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
@@ -64,7 +63,7 @@
     </compilation>
     <httpRuntime targetFramework="4.5" executionTimeout="18000000000"/>
     <httpHandlers>
-      <add path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" validate="false" />
+      <add path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" validate="false"/>
       <add path="Telerik.Web.UI.WebResource.axd" verb="*" type="Telerik.Web.UI.WebResource" validate="false"/>
       <add path="Telerik.Web.UI.DialogHandler.aspx" verb="*" type="Telerik.Web.UI.DialogHandler, Telerik.Web.UI"/>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
@@ -72,9 +71,8 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-
     <handlers>
-      <add name="ChartImage.axd_*" path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" preCondition="integratedMode" />
+      <add name="ChartImage.axd_*" path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" preCondition="integratedMode"/>
       <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource"/>
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </handlers>
