--- a/FZero/Vanrise.Fzero.Bypass.WebSite/web.config
+++ b/FZero/Vanrise.Fzero.Bypass.WebSite/web.config
@@ -40,8 +40,7 @@
     <add key="AutomaticUploadPath" value="C:\\FMS_Import\\Automatic\\"/>
     <add key="ReportsPath" value="C:\FMS\Pub\FMS_Reports\"/>
     <add key="OperatorPath" value="http://166.62.16.175/Fzero/ReportedCases.aspx"/>
-    <add key="aspnet:MaxHttpCollectionKeys" value="3000" />
-
+    <add key="aspnet:MaxHttpCollectionKeys" value="3000"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off"/>
@@ -54,6 +53,7 @@
         <add assembly="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
         <add assembly="System.ServiceProcess, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="Telerik.Web.Design, Version=2013.1.220.45, Culture=neutral, PublicKeyToken=121FAE78165BA3D4"/>
       </assemblies>
       <buildProviders>
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
@@ -61,18 +61,17 @@
     </compilation>
     <httpRuntime targetFramework="4.5" executionTimeout="18000000000"/>
     <httpHandlers>
-      <add path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" validate="false" />
+      <add path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" validate="false"/>
       <add path="Telerik.Web.UI.WebResource.axd" verb="*" type="Telerik.Web.UI.WebResource" validate="false"/>
       <add path="Telerik.Web.UI.DialogHandler.aspx" verb="*" type="Telerik.Web.UI.DialogHandler, Telerik.Web.UI"/>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" validate="false"/>
     </httpHandlers>
-    <pages theme="skins" />
+    <pages theme="skins"/>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
-
     <handlers>
-      <add name="ChartImage.axd_*" path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" preCondition="integratedMode" />
+      <add name="ChartImage.axd_*" path="ChartImage.axd" verb="*" type="Telerik.Web.UI.ChartHttpHandler, Telerik.Web.UI, Culture=neutral, PublicKeyToken=121fae78165ba3d4" preCondition="integratedMode"/>
       <add name="Telerik_Web_UI_WebResource_axd" verb="*" preCondition="integratedMode" path="Telerik.Web.UI.WebResource.axd" type="Telerik.Web.UI.WebResource"/>
       <add name="ReportViewerWebControlHandler" preCondition="integratedMode" verb="*" path="Reserved.ReportViewerWebControl.axd" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </handlers>
