--- a/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
+++ b/Vanrise/Code/Vanrise.Common/Vanrise.Common.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\Resources\DLLs\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -64,7 +65,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Compressor.cs" />
-    <Compile Include="ILogger.cs" />
+    <Compile Include="ExceptionLogger.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="LoggerFactory.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="ObjectFactory.cs" />
