--- a/CLITester/AndroidApplicationService/App.config
+++ b/CLITester/AndroidApplicationService/App.config
@@ -3,7 +3,7 @@
   <appSettings>
     <add key="ExpiryTime" value="60" />
     <add key="LineAvailable" value="20" />
-    <add key="SendingEmail" value="hadihawi@gmail.com" />
+    <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
     <add key="SmtpServer" value="smtp.gmail.com" />
   </appSettings>
     <startup> 
