--- a/CLITester/CallGeneratorLibrary/Properties/Settings.settings
+++ b/CLITester/CallGeneratorLibrary/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="FraudTest2ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.;User ID=sa;Password=vanrise@cce$$;Initial Catalog=FraudTest2;&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=LENOVO\SQL2008R2;Initial Catalog=FraudTest2;Persist Security Info=True;User ID=sa;Password=lenovo&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.;User ID=sa;Password=vanrise@cce$$;Initial Catalog=FraudTest2;</Value>
+      <Value Profile="(Default)">Data Source=LENOVO\SQL2008R2;Initial Catalog=FraudTest2;Persist Security Info=True;User ID=sa;Password=lenovo</Value>
     </Setting>
   </Settings>
 </SettingsFile>
