--- a/CLITester/CallGeneratorLibrary/app.config
+++ b/CLITester/CallGeneratorLibrary/app.config
@@ -3,12 +3,13 @@
   <configSections>
   </configSections>
   <appSettings>
-    <add key="SendingEmail" value="hadihawi@gmail.com" />
+    <add key="SipAccId" value="2" />
+    <add key="SendingEmail" value="vanrise.clitester@gmail.com" />
     <add key="SmtpServer" value="smtp.gmail.com" />
   </appSettings>
     <connectionStrings>
         <add name="CallGeneratorLibrary.Properties.Settings.FraudTest2ConnectionString"
-            connectionString="Data Source=.;User ID=sa;Password=vanrise@cce$$;Initial Catalog=FraudTest2;"
+            connectionString="Data Source=LENOVO\SQL2008R2;Initial Catalog=FraudTest2;Persist Security Info=True;User ID=sa;Password=lenovo"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
