--- a/TOneV2/Code/TOneV2/TestRuntime/app.config
+++ b/TOneV2/Code/TOneV2/TestRuntime/app.config
@@ -158,9 +158,11 @@
     <add key="RepricingTo" value="2014-07-07"/>-->
     <add key="RepricingFrom" value="2014-03-01"/>
     <add key="RepricingTo" value="2014-03-01"/>
+    <add key="RuntimeConnStringKey" value="TransactionDBConnString"/>
     <add key="QueueDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString"/>
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString"/>
+    <add key="LogLevel" value="Information"/>
   </appSettings>
   <system.codedom>
     <compilers>
