--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="CDRGenerationProcessInput.cs" />
     <Compile Include="DailyRepricingProcessInput.cs" />
+    <Compile Include="ImportCDRProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StoreCDRsInDBInput.cs" />
     <Compile Include="TimeRange.cs" />
     <Compile Include="TimeRangeRepricingProcessInput.cs" />
     <Compile Include="TimeRangeRepricingProcessOutput.cs" />
