Route Build Workflow
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20627

--- a/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Data/TOne.LCR.Data.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IZoneRateCustomerDataManager.cs" />
     <Compile Include="LCRDataManagerFactory.cs" />
     <Compile Include="ICodeDataManager.cs" />
     <Compile Include="ICodeMatchDataManager.cs" />
