--- a/TOneV2/Code/TOneV2/TOne.LCRProcess.Arguments/TOne.LCRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess.Arguments/TOne.LCRProcess.Arguments.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildRouteProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateCodeZoneMatchProcessInput.cs" />
     <Compile Include="UpdateZoneRateProcessInput.cs" />
