--- a/TOneV2/Code/TOneV2/TOne.LCRProcess/TOne.LCRProcess.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCRProcess/TOne.LCRProcess.csproj
@@ -44,8 +44,11 @@
     <Reference Include="NHibernate">
       <HintPath>..\Resources\DLLs\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Activities" />
+    <Reference Include="System.Activities.Presentation" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.ServiceModel" />
@@ -76,8 +79,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
     </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildRouteProcess.cs" />
     <Compile Include="Entities\CodeZoneMatchProcessLastRunInfo.cs" />
     <Compile Include="Entities\ZoneRateProcessLastRunInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -126,7 +131,12 @@
       <SubType>Designer</SubType>
     </XamlAppDef>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <XamlAppDef Include="BuildRouteProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
