Add ProcessRawCDRs Activity
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20628

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -90,6 +90,7 @@
     <Compile Include="InitializeObjects.cs" />
     <Compile Include="LoadCDRs.cs" />
     <Compile Include="ProcessBillingCDRs.cs" />
+    <Compile Include="ProcessRawCDRs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaveCDRsToQueue.cs" />
     <Compile Include="SaveCDRsToDB.cs" />
