Add BillingCDRBase Entity Class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20629

--- a/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
@@ -55,6 +55,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BillingCDRBase.cs" />
     <Compile Include="CDRBatch.cs" />
     <Compile Include="CDRBillingBatch.cs" />
     <Compile Include="CDRInvalidBatch.cs" />
