--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DailyRepricingProcessInput.cs" />
     <Compile Include="ImportCDRProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RawCDRsProcessInput.cs" />
     <Compile Include="StoreCDRsInDBInput.cs" />
     <Compile Include="TimeRange.cs" />
     <Compile Include="TimeRangeRepricingProcessInput.cs" />
