--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data.SQL/TOne.Analytics.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data.SQL/TOne.Analytics.Data.SQL.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrafficDataManager.cs" />
+    <Compile Include="AnalyticsDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TOne.Analytics.Data\TOne.Analytics.Data.csproj">
