--- a/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Data/TOne.Analytics.Data.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="AnalyticsDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
-    <Compile Include="ITrafficDataManager.cs" />
+    <Compile Include="IAnalyticsDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
