--- a/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Entities/TOne.Entities.csproj
@@ -111,6 +111,7 @@
     <Compile Include="CodeNode.cs" />
     <Compile Include="CodeTree.cs" />
     <Compile Include="IBulkTableService.cs" />
+    <Compile Include="MultipleSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueName.cs" />
     <Compile Include="TOneQueue.cs" />
