--- a/TOneV2/Code/TOneV2/TOne.LCR.Entities/TOne.LCR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Entities/TOne.LCR.Entities.csproj
@@ -46,13 +46,29 @@
     <Compile Include="LCRCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CodeMatch.cs" />
+    <Compile Include="RoutingRules\Actions\BaseRouteRuleAction.cs" />
     <Compile Include="RoutingRules\CodeSelectionSet.cs" />
     <Compile Include="RoutingRules\BaseCodeSet.cs" />
+    <Compile Include="RoutingRules\Actions\RouteBlockAction.cs" />
+    <Compile Include="RoutingRules\Actions\RouteOverrideAction.cs" />
+    <Compile Include="RoutingRules\Actions\RoutePriorityAction.cs" />
     <Compile Include="RoutingRules\RoutingRule.cs" />
     <Compile Include="RoutingRules\ZoneSelectionSet.cs" />
+    <Compile Include="Routing\Route.cs" />
+    <Compile Include="Routing\RouteDetail.cs" />
+    <Compile Include="Routing\RouteOptionsDetail.cs" />
+    <Compile Include="Routing\SupplierRoute.cs" />
+    <Compile Include="Routing\RouteOptions.cs" />
+    <Compile Include="Routing\SupplierRouteDetail.cs" />
     <Compile Include="SupplierCodeInfo.cs" />
     <Compile Include="ZoneRateCustomer.cs" />
     <Compile Include="ZoneRateSupplier.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TOne.Entities\TOne.Entities.csproj">
+      <Project>{60da66bd-017d-43a2-82dc-ed7db8751d23}</Project>
+      <Name>TOne.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
