Add ProcessBillingCDR Act
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20676

--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Activities/TOne.CDRProcess.Activities.csproj
@@ -85,6 +85,7 @@
     <Compile Include="PrepareCDRsForDBApply.cs" />
     <Compile Include="PrepareInvalidCDRsForDBApply.cs" />
     <Compile Include="PrepareMainCDRsForDBApply.cs" />
+    <Compile Include="ProcessBillingCDR.cs" />
     <Compile Include="ProcessCDRs.cs" />
     <Compile Include="GetCDRs.cs" />
     <Compile Include="InitializeObjects.cs" />
