Add CDR Entities
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C20677

--- a/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDR.Entities/TOne.CDR.Entities.csproj
@@ -56,6 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BillingCDRBase.cs" />
+    <Compile Include="BillingCDRCost.cs" />
+    <Compile Include="BillingCDRInvalid.cs" />
+    <Compile Include="BillingCDRMain.cs" />
+    <Compile Include="BillingCDRPricingBase.cs" />
+    <Compile Include="BillingCDRSale.cs" />
     <Compile Include="CDRBatch.cs" />
     <Compile Include="CDRBillingBatch.cs" />
     <Compile Include="CDRInvalidBatch.cs" />
