--- a/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Data.SQL/TOne.Data.SQL.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseTOneDataManager.cs" />
-    <Compile Include="CarrierDataManager.cs" />
+    <Compile Include="BusinessEntityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
