--- a/FZero/Vanrise.Fzero.CDRAnalysis.Mobile/App.Config
+++ b/FZero/Vanrise.Fzero.CDRAnalysis.Mobile/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.118.2;Initial Catalog=CDRAnalysis;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-  <add name="Entities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.118.2;initial catalog=CDRAnalysis;user id=sa;password=iraq@cce$$1;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
