--- a/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AEE31608-D6E1-4005-9773-B1B970AFD323}</ProjectGuid>
+    <ProjectGuid>{5E726053-E223-49CE-9BF6-61271153A94D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TOne.LCR.Entities</RootNamespace>
-    <AssemblyName>TOne.LCR.Entities</AssemblyName>
+    <RootNamespace>TOne.LCR.Business</RootNamespace>
+    <AssemblyName>TOne.LCR.Business</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,31 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LCRCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CodeMatch.cs" />
-    <Compile Include="RoutingRules\Actions\BaseRouteRuleAction.cs" />
-    <Compile Include="RoutingRules\CodeSet\CodeSelectionSet.cs" />
-    <Compile Include="RoutingRules\CodeSet\BaseCodeSet.cs" />
-    <Compile Include="RoutingRules\Actions\RouteBlockAction.cs" />
-    <Compile Include="RoutingRules\Actions\RouteOverrideAction.cs" />
-    <Compile Include="RoutingRules\Actions\RoutePriorityAction.cs" />
-    <Compile Include="RoutingRules\RoutingRule.cs" />
-    <Compile Include="RoutingRules\CodeSet\ZoneSelectionSet.cs" />
-    <Compile Include="Routing\Route.cs" />
-    <Compile Include="Routing\RouteDetail.cs" />
-    <Compile Include="Routing\RouteOptionsDetail.cs" />
-    <Compile Include="Routing\SupplierRoute.cs" />
-    <Compile Include="Routing\RouteOptions.cs" />
-    <Compile Include="Routing\SupplierRouteDetail.cs" />
-    <Compile Include="SupplierCodeInfo.cs" />
-    <Compile Include="ZoneRateCustomer.cs" />
-    <Compile Include="ZoneRateSupplier.cs" />
+    <Compile Include="RouteManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TOne.Entities\TOne.Entities.csproj">
-      <Project>{60da66bd-017d-43a2-82dc-ed7db8751d23}</Project>
-      <Name>TOne.Entities</Name>
+    <ProjectReference Include="..\TOne.LCR.Entities\TOne.LCR.Entities.csproj">
+      <Project>{aee31608-d6e1-4005-9773-b1b970afd323}</Project>
+      <Name>TOne.LCR.Entities</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
