--- a/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Entities/TOne.Analytics.Entities.csproj
@@ -47,8 +47,11 @@
     <Compile Include="CarrierRateView.cs" />
     <Compile Include="CarrierSummaryView.cs" />
     <Compile Include="Enumerations.cs" />
+    <Compile Include="ProfitByWeekDayView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopCustomersView.cs" />
     <Compile Include="TopNDestinationView.cs" />
+    <Compile Include="TrafficSummaryView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
