--- a/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess.Arguments/TOne.CDRProcess.Arguments.csproj
@@ -48,7 +48,7 @@
     <Compile Include="ImportCDRProcessInput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawCDRsProcessInput.cs" />
-    <Compile Include="StoreCDRsInDBInput.cs" />
+    <Compile Include="StoreCDRsInDBProcessInput.cs" />
     <Compile Include="TimeRange.cs" />
     <Compile Include="TimeRangeRepricingProcessInput.cs" />
     <Compile Include="TimeRangeRepricingProcessOutput.cs" />
