--- a/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
+++ b/TOneV2/Code/TOneV2/TOne.CDRProcess/TOne.CDRProcess.csproj
@@ -79,7 +79,7 @@
     <Compile Include="ImportCDRProcess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawCDRsProcess.cs" />
-    <Compile Include="StoreCDRsInDB.cs" />
+    <Compile Include="StoreCDRsInDBProcess.cs" />
     <Compile Include="TimeRangeRepricingProcess.cs" />
     <Compile Include="UpdateBillingPricingProcess.cs" />
   </ItemGroup>
@@ -122,10 +122,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <XamlAppDef Include="CDRImportProcess.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </XamlAppDef>
     <XamlAppDef Include="DailyRepricingProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -156,13 +152,19 @@
     </XamlAppDef>
   </ItemGroup>
   <ItemGroup>
-    <XamlAppDef Include="StoreCDRsInDB.xaml">
+    <XamlAppDef Include="StoreCDRsInDBProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </XamlAppDef>
   </ItemGroup>
   <ItemGroup>
     <XamlAppDef Include="RawCDRsProcess.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </XamlAppDef>
+  </ItemGroup>
+  <ItemGroup>
+    <XamlAppDef Include="CDRImportProcess.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </XamlAppDef>
